# carla

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  mkdocs.yml
.github/workflows/: _ci-ubuntu.yml  _ci-windows.yml  ue4_content.yml
CMake/: Dependencies.cmake  Options.cmake  Toolchain.cmake
Co-Simulation/PTV-Vissim/: run_synchronization.py
Co-Simulation/PTV-Vissim/vissim_integration/: bridge_helper.py  carla_simulation.py  constants.py  vissim_simulation.py
Docs/: build_faq.md  build_linux.md  build_linux_ue5.md  build_windows.md  catalogue_scripts.md  coordinates.md  download.md  foundations.md  nvidia_cosmos_transfer.md  nvidia_nurec.md  python_api.md  ref_sensors.md
Examples/CppClient/: Makefile  main.cpp
LibCarla/cmake/fast_dds/: CMakeLists.txt
LibCarla/cmake/server/: CMakeLists.txt
LibCarla/source/carla/: AtomicList.h  AtomicSharedPtr.h  Buffer.h  BufferPool.h  BufferView.h  Debug.h  Exception.cpp  Exception.h  FileSystem.cpp  FileSystem.h  Functional.h  Iterator.h  ListView.h  Logging.h  Memory.h  MoveHandler.h  MsgPack.h  MsgPackAdaptors.h  NonCopyable.h  Platform.h  PythonUtil.h  RecurrentSharedFuture.h  Sockets.h  StopWatch.h  StringUtil.cpp  StringUtil.h  ThreadGroup.h  ThreadPool.h  Time.h  TypeTraits.h
LibCarla/source/carla/actors/: ActorAttribute.cpp  ActorAttribute.h  ActorBlueprint.cpp  ActorBlueprint.h  BlueprintLibrary.cpp  BlueprintLibrary.h
LibCarla/source/carla/client/: Actor.cpp  Actor.h  ActorAttribute.cpp  ActorAttribute.h  ActorBlueprint.cpp  ActorBlueprint.h  ActorList.cpp  ActorList.h  ActorSnapshot.h  BlueprintLibrary.cpp  BlueprintLibrary.h  Client.h  ClientSideSensor.h  DebugHelper.cpp  DebugHelper.h  FIleTransfer.cpp  FileTransfer.cpp  FileTransfer.h  GarbageCollectionPolicy.h  Junction.cpp  Junction.h  Landmark.h  LaneInvasionSensor.cpp  LaneInvasionSensor.h  Light.cpp  Light.h  LightManager.cpp  LightManager.h  LightState.h  Map.cpp  Map.h  Sensor.h  ServerSideSensor.cpp  ServerSideSensor.h  TimeoutException.cpp  TimeoutException.h  Timestamp.h  TrafficLight.cpp  TrafficLight.h  TrafficSign.cpp  (+12 more)
LibCarla/source/carla/geom/: Acceleration.h  AngularVelocity.h  BoundingBox.h  CubicPolynomial.h  GeoLocation.cpp  GeoLocation.h  GeoProjection.cpp  GeoProjection.h  GeoProjectionsParams.h  Location.h  Math.cpp  Math.h  Mesh.cpp  Mesh.h  Quaternion.h  Rotation.h  Rtree.h  Simplification.cpp  Simplification.h  Transform.h  Vector2D.h  Vector3D.h  Vector3DInt.h  Velocity.h
LibCarla/source/carla/image/: BoostGil.h  CityScapesPalette.h  ColorConverter.h  ImageConverter.h  ImageIO.h  ImageIOConfig.h  ImageView.h
LibCarla/source/carla/multigpu/: commands.h  incomingMessage.h  listener.cpp  listener.h  primary.cpp  primary.h  primaryCommands.cpp  primaryCommands.h  router.cpp  router.h  secondary.cpp  secondary.h  secondaryCommands.cpp  secondaryCommands.h
LibCarla/source/carla/nav/: Navigation.cpp  Navigation.h  WalkerEvent.cpp  WalkerEvent.h  WalkerManager.cpp  WalkerManager.h
LibCarla/source/carla/opendrive/: OpenDriveParser.cpp  OpenDriveParser.h
LibCarla/source/carla/pointcloud/: PointCloudIO.h
LibCarla/source/carla/profiler/: LifetimeProfiled.cpp  LifetimeProfiled.h  Profiler.cpp  Profiler.h
LibCarla/source/carla/pytorch/: pytorch.cpp  pytorch.h
LibCarla/source/carla/road/: Controller.h  Deformation.h  InformationSet.h  Junction.h  Lane.cpp  Lane.h  LaneSection.cpp  LaneSection.h  LaneSectionMap.h  LaneValidity.h  Map.cpp  Map.h  MapBuilder.cpp  MapBuilder.h  MapData.cpp  MapData.h  MeshFactory.cpp  MeshFactory.h  Object.h  Road.cpp  Road.h  RoadElementSet.h  RoadTypes.h  Signal.h  SignalType.cpp  SignalType.h
LibCarla/source/carla/ros2/: ROS2.cpp  ROS2.h  ROS2CallbackData.h
LibCarla/source/carla/rpc/: AckermannControllerSettings.h  Actor.h  ActorAttribute.h  ActorAttributeType.h  ActorDefinition.h  ActorDescription.h  ActorId.h  ActorState.h  AttachmentType.h  BoneTransformDataIn.h  BoneTransformDataOut.h  BoundingBox.h  Client.h  Color.h  Command.h  CommandResponse.h  CustomV2XBytes.h  DebugShape.h  EnvironmentObject.h  EpisodeInfo.h  EpisodeSettings.h  FloatColor.h  LabelledPoint.h  LightState.h  Location.h  MapInfo.h  MapLayer.cpp  MapLayer.h  MaterialParameter.cpp  MaterialParameter.h  Metadata.h  ObjectLabel.h  OpendriveGenerationParameters.h  Response.h  (+26 more)
LibCarla/source/compiler/: disable-ue4-macros.h  enable-ue4-macros.h
LibCarla/source/test/: Buffer.cpp  Buffer.h  Random.h  test.cpp  test.h
LibCarla/source/util/: disable-ue4-macros.h
PythonAPI/carla/: pyproject.toml  setup.py
PythonAPI/carla/src/: Actor.cpp
PythonAPI/docs/: actor.yml  bp_doc_gen.py  control.yml  geom.yml  map.yml  sensor.yml  sensor_data.yml
PythonAPI/examples/: V2XDemo.py  bounding_boxes.py  carla_cosmos_gen.py  generate_traffic.py  manual_control.py  manual_control_fisheye.py  open3d_lidar.py  place_actors.py  sensor_synchronization.py  start_recording.py  start_replaying.py
PythonAPI/examples/rss/: manual_control_rss.py  rss_sensor.py  rss_visualization.py
PythonAPI/test/smoke/: __init__.py  test_determinism.py  test_geoconversion.py  test_map.py  test_sensor_tick_time.py  test_spawnpoints.py  test_vehicle_physics.py
PythonAPI/test/unit/: test_client.py  test_transform.py  test_vehicle.py
Unreal/CarlaUE4/: .gitignore
Unreal/CarlaUE4/Config/: DefaultEngine.ini  DefaultGame.ini
Unreal/CarlaUnreal/Config/: DefaultEngine.ini  DefaultGame.ini
Util/: ContentVersions.txt  download_from_gdrive.py
Util/BuildTools/: BuildCarlaUE4.sh  BuildLibCarla.sh  BuildOSM2ODR.sh  BuildPythonAPI.bat  BuildPythonAPI.sh  BuildUE4Plugins.sh  Import.py  Linux.mk  Package.bat  Package.sh  Setup.bat  Setup.sh  Windows.mk  enable_carsim_to_uproject.py  enable_simready_to_uproject.py
Util/Docker/: Base.Dockerfile  CI.Dockerfile  Development.Dockerfile  README.md  build.sh  docker_tools.py  docker_utils.py  run.sh
Util/Docker/build_scripts/: build_cpython.sh  build_ue4.sh
Util/InstallersWin/: install_chrono.bat  install_eigen.bat  install_rpclib.bat
Util/SetupUtils/: InstallPrerequisites.sh
Util/Tools/: Import.py
(+971 files in other folders)
